<resources>
    <string name="app_name">MyMeeting</string>
    <string name="action_settings">Filters</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">AddMeeting</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_meeting">delete meeting</string>
    <string name="image_meeting">image meeting room</string>
    <string name="meeting_list">meeting list</string>
    <string name="add_new_meeting">add new meeting</string>
    <string name="send_invitation">send invitation</string>
    <string name="select_room">select a meeting room</string>
    <string name="add_an_email">add a contact mail</string>
    <string name="write_an_email">write an email</string>
    <string name="delete_mail">delete mail</string>
    <string name="Day_for_the_meeting">day for the meeting</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="set_hours_for_the_meeting">Set hours for the meeting</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="enter_a_subject_for_the_meeting">Enter a Subject for the meeting</string>
    <string name="date_filter">Date Filter</string>
    <string name="room_filter">Room Filter</string>
    <string name="all">all</string>
    <string name="show_all">Show all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date">select a date</string>
    <string name="select_time">select an hour</string>
    <string name="date_selected">date selected</string>
    <string name="hour_selected">hour selected</string>
    <string name="list_mail">list mail of guest</string>
    <string name="list_rooms">list room for the meeting</string>
    <string name="subject">subject for the meeting</string>
</resources>