<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RoomFilterDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/select_date" />

        <TextView
            android:id="@+id/textViewDateSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/date_selected"
            android:textSize="24sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/button_select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/select_time" />

        <TextView
            android:id="@+id/textViewHourSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/hour_selected"
            android:textSize="24sp"
            android:textStyle="italic"/>
    </LinearLayout>
</FrameLayout>