<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4sp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF0DD"

    android:padding="16sp"
    android:elevation="16dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/item_image_list_reu"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"

        android:contentDescription="@string/image_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_meeting_room_24" />

    <TextView
        android:id="@+id/item_room_name"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_margin="4dp"
        android:hint="REUNION A"
        android:textStyle="bold"
        android:contentDescription="@string/select_room"
        app:layout_constraintBottom_toBottomOf="@+id/item_image_list_reu"
        app:layout_constraintStart_toEndOf="@+id/item_image_list_reu"
        app:layout_constraintTop_toTopOf="@+id/item_image_list_reu"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/item_meeting_hour"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_margin="4dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/hour_selected"
        android:focusable="auto"
        android:hint="14:00"
        android:inputType="datetime"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/item_image_list_reu"
        app:layout_constraintStart_toEndOf="@+id/item_room_name"
        app:layout_constraintTop_toTopOf="@+id/item_image_list_reu"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/item_list_objet"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/subject"
        android:focusable="auto"
        android:gravity="center"
        android:hint="Presentation"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/item_image_list_reu"
        app:layout_constraintStart_toEndOf="@+id/item_image_list_reu"
        app:layout_constraintTop_toBottomOf="@+id/item_room_name"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/item_list_guest"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_margin="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/list_mail"
        android:focusable="auto"
        android:hint="example@hotmail.com"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_image_list_reu" />

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:background="@null"

        android:contentDescription="@string/delete_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
