<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        tools:context=".AddMeetingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="#F3F0F0"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="37dp">
    <TextView
        android:id="@+id/textview_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Day_for_the_meeting"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:autofillHints=""
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:text="@string/choose_a_date"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_date_title"
                tools:ignore="LabelFor">

            </EditText>

            <TextView
                android:id="@+id/textViewHours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/set_hours_for_the_meeting"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate">

            </TextView>

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHours">

            </Button>

            <Button
                android:id="@+id/button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="18dp"
                android:text="@string/stop"
                app:layout_constraintBottom_toTopOf="@+id/button_room_select"
                app:layout_constraintEnd_toEndOf="parent">

            </Button>

            <EditText
                android:id="@+id/EditSendMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="85dp"
                android:autofillHints=""
                android:focusableInTouchMode="true"
                android:hint="@string/enter_a_subject_for_the_meeting"
                android:inputType="textEmailSubject"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonSendMail"
                app:layout_constraintStart_toStartOf="parent">

            </EditText>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="15dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/write_an_email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/recyclerviewMail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_room_select">

            </EditText>

            <ImageButton
                android:id="@+id/imageButtonAddMail"
                android:layout_width="55dp"
                android:layout_height="0dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/add_an_email"
                android:minHeight="48dp"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@+id/button_room_select"
                app:layout_constraintTop_toBottomOf="@+id/button_stop">

            </ImageButton>

            <ImageButton
                android:id="@+id/imageButtonSendMail"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="72dp"
                android:contentDescription="@string/send_invitation"
                android:src="@drawable/baseline_send_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/EditSendMail"
                app:layout_constraintTop_toTopOf="@+id/EditSendMail">

            </ImageButton>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewMail"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="74dp"
                android:layout_marginBottom="68dp"
                android:nestedScrollingEnabled="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonSendMail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButtonAddMail"
                tools:listitem="@layout/fragment_item_mail" />

            <Button
                android:id="@+id/button_room_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:text="@string/select_room"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_start" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
